--- a/HTML/blog.html
+++ b/HTML/blog.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BLOG</title>
-    <link rel="stylesheet" href="/CSS/blog.css">
-    <link rel="stylesheet" href="/ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
-    <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
+    <link rel="stylesheet" href="../CSS/blog.css">
+    <link rel="stylesheet" href="../ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
+    <link rel="icon" type="image/png" href="../IMG/logoTitile.png"/></head>
 </head>
 
 <body>
@@ -35,10 +35,10 @@
 
                     <div class="header__form3-moreLanguage">
                         <p class="header__form3-moreLaguage-text1">
-                            <img src="/IMG/eglish.png" alt="" />English
+                            <img src="../IMG/eglish.png" alt="" />English
                         </p>
                         <p class="header__form3-moreLaguage-text2">
-                            <img src="/IMG/ar.png" alt="" />Arabic
+                            <img src="../IMG/ar.png" alt="" />Arabic
                         </p>
                     </div>
                 </div>
@@ -60,7 +60,7 @@
     <!-- header2 -->
     <div class="header2">
       <div class="header2__logo">
-        <img src="/IMG/logoshop.png" alt="" />
+        <img src="../IMG/logoshop.png" alt="" />
       </div>
       <div class="header2__menu">
         <!-- HOME -->
@@ -176,7 +176,7 @@
                 <li>Accessories</li>
               </ul>
               <div class="header2__menu-morePROMOTION-img">
-                <img src="/IMG/headphone.jpg" alt="" />
+                <img src="../IMG/headphone.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -190,7 +190,7 @@
             <div class="header2__menu-moreACCESSORIES-listItem">
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head1.png" alt="" style="width: 71%" />
+                  <img src="../IMG/head1.png" alt="" style="width: 71%" />
                 </div>
   
                 <hr />
@@ -201,7 +201,7 @@
   
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head2.png" alt="" />
+                  <img src="../IMG/head2.png" alt="" />
                 </div>
                 <hr />
                 <div class="header2__menu-moreACCESSORIES-content">
@@ -211,7 +211,7 @@
   
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head3.png" alt="" />
+                  <img src="../IMG/head3.png" alt="" />
                 </div>
                 <br />
                 <hr />
@@ -507,22 +507,22 @@
   <div class="logo">
     <div class="logo__form">
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran1.jpg" alt="" />
+        <img src="../IMG/logo/bran1.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran2.jpg" alt="" />
+        <img src="../IMG/logo/bran2.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran3.jpg" alt="" />
+        <img src="../IMG/logo/bran3.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran4.jpg" alt="" />
+        <img src="../IMG/logo/bran4.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran5.jpg" alt="" />
+        <img src="../IMG/logo/bran5.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran6.jpg" alt="" />
+        <img src="../IMG/logo/bran6.jpg" alt="" />
       </div>
     </div>
   </div>
@@ -530,7 +530,7 @@
   <div class="footer">
     <div class="footer__infor">
       <div class="footer__infor-logo">
-        <img src="/IMG/logoShop2.png" alt="" />
+        <img src="../IMG/logoShop2.png" alt="" />
       </div>
       <br />
       <div class="footer__infor-contact">
@@ -548,7 +548,7 @@
         <span style="font-weight: 700; color: #fff">PHONE:</span>
         <span style="color: #ff4000; font-weight: 700; font-size: 30px">1-88-345-6789</span>
         <br /><br />
-        <img src="/IMG/bank.png" alt="" />
+        <img src="../IMG/bank.png" alt="" />
       </div>
     </div>
 
