--- a/HTML/portfolio.html
+++ b/HTML/portfolio.html
@@ -6,9 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Masonry</title>
-    <link rel="stylesheet" href="/CSS/portfolio.css">
-    <link rel="stylesheet" href="/ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
-    <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
+    <link rel="stylesheet" href="../CSS/portfolio.css">
+    <link rel="stylesheet" href="../ICON/fontawesome-free-6.3.0-web/css/all.min.css" />
+    <link rel="icon" type="image/png" href="..//IMG/logoTitile.png"/></head>
 </head>
 
 <body>
@@ -39,8 +39,8 @@
                 <div class="header__form3-english">ENGLISH <i class="fa-solid fa-caret-down"></i>
 
                     <div class="header__form3-moreLanguage">
-                        <p class="header__form3-moreLaguage-text1"><img src="/IMG/eglish.png" alt="">English</p>
-                        <p class="header__form3-moreLaguage-text2"><img src="/IMG/ar.png" alt="">Arabic</p>
+                        <p class="header__form3-moreLaguage-text1"><img src="../IMG/eglish.png" alt="">English</p>
+                        <p class="header__form3-moreLaguage-text2"><img src="../IMG/ar.png" alt="">Arabic</p>
 
                     </div>
                 </div>
@@ -67,7 +67,7 @@
 
     <div class="header2">
       <div class="header2__logo">
-        <img src="/IMG/logoshop.png" alt="" />
+        <img src="../IMG/logoshop.png" alt="" />
       </div>
       <div class="header2__menu">
         <!-- HOME -->
@@ -183,7 +183,7 @@
                 <li>Accessories</li>
               </ul>
               <div class="header2__menu-morePROMOTION-img">
-                <img src="/IMG/headphone.jpg" alt="" />
+                <img src="../IMG/headphone.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -197,7 +197,7 @@
             <div class="header2__menu-moreACCESSORIES-listItem">
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head1.png" alt="" style="width: 71%" />
+                  <img src="../IMG/head1.png" alt="" style="width: 71%" />
                 </div>
   
                 <hr />
@@ -208,7 +208,7 @@
   
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head2.png" alt="" />
+                  <img src="../IMG/head2.png" alt="" />
                 </div>
                 <hr />
                 <div class="header2__menu-moreACCESSORIES-content">
@@ -218,7 +218,7 @@
   
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head3.png" alt="" />
+                  <img src="../IMG/head3.png" alt="" />
                 </div>
                 <br />
                 <hr />
@@ -370,7 +370,7 @@
                 </div>
             </span>
 
-            <img src="/IMG/Masory/pic1.jpg" alt="">
+            <img src="../IMG/Masory/pic1.jpg" alt="">
         </div>
         
         <div class="listProduct__img">
@@ -381,7 +381,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic2.jpg" alt="">
+            <img src="../IMG/Masory/pic2.jpg" alt="">
         </div>
         <div class="listProduct__img">
             <span>
@@ -391,7 +391,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic3.jpg" alt="">
+            <img src="../IMG/Masory/pic3.jpg" alt="">
         </div>
         <div class="listProduct__img">
             <span>
@@ -401,7 +401,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic4.jpg" alt="">
+            <img src="../IMG/Masory/pic4.jpg" alt="">
         </div> 
          <div class="listProduct__img">
             <span>
@@ -411,7 +411,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic5.jpg" alt="">
+            <img src="../IMG/Masory/pic5.jpg" alt="">
         </div> 
          <div class="listProduct__img">
             <span>
@@ -421,7 +421,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic6.jpg" alt="">
+            <img src="../IMG/Masory/pic6.jpg" alt="">
         </div>
         <div class="listProduct__img">
             <span>
@@ -431,7 +431,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic7.jpg" alt="">
+            <img src="../IMG/Masory/pic7.jpg" alt="">
         </div>
         <div class="listProduct__img">
             <span>
@@ -441,7 +441,7 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic8.jpg" alt="">
+            <img src="../IMG/Masory/pic8.jpg" alt="">
         </div>
         <div class="listProduct__img">
             <span>
@@ -451,29 +451,29 @@
                     <i class="fa-solid fa-link"></i>
                 </div>
             </span>
-            <img src="/IMG/Masory/pic9.jpg" alt="">
+            <img src="../IMG/Masory/pic9.jpg" alt="">
         </div>
     </div>
     <!-- logo -->
     <div class="logo">
         <div class="logo__form">
             <div class="logo__form-items">
-                <img src="/IMG/logo/bran1.jpg" alt="" />
+                <img src="../IMG/logo/bran1.jpg" alt="" />
             </div>
             <div class="logo__form-items">
-                <img src="/IMG/logo/bran2.jpg" alt="" />
+                <img src="../IMG/logo/bran2.jpg" alt="" />
             </div>
             <div class="logo__form-items">
-                <img src="/IMG/logo/bran3.jpg" alt="" />
+                <img src="../IMG/logo/bran3.jpg" alt="" />
             </div>
             <div class="logo__form-items">
-                <img src="/IMG/logo/bran4.jpg" alt="" />
+                <img src="../IMG/logo/bran4.jpg" alt="" />
             </div>
             <div class="logo__form-items">
-                <img src="/IMG/logo/bran5.jpg" alt="" />
+                <img src="../IMG/logo/bran5.jpg" alt="" />
             </div>
             <div class="logo__form-items">
-                <img src="/IMG/logo/bran6.jpg" alt="" />
+                <img src="../IMG/logo/bran6.jpg" alt="" />
             </div>
         </div>
     </div>
@@ -481,7 +481,7 @@
     <div class="footer">
         <div class="footer__infor">
             <div class="footer__infor-logo">
-                <img src="/IMG/logoShop2.png" alt="" />
+                <img src="../IMG/logoShop2.png" alt="" />
             </div>
             <br />
             <div class="footer__infor-contact">
@@ -499,7 +499,7 @@
                 <span style="font-weight: 700; color: #fff">PHONE:</span>
                 <span style="color: #ff4000; font-weight: 700; font-size: 30px">1-88-345-6789</span>
                 <br /><br />
-                <img src="/IMG/bank.png" alt="" />
+                <img src="../IMG/bank.png" alt="" />
             </div>
         </div>
 
