--- a/HTML/aboutUs.html
+++ b/HTML/aboutUs.html
@@ -6,12 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hi Theme</title>
-    <link rel="stylesheet" href="/CSS/aboutUs.css">
-    <link rel="stylesheet" href="ICON/fontawesome-free-6.3.0-web/css/all.min.css">
+    <link rel="stylesheet" href="../CSS/aboutUs.css">
+    <link rel="stylesheet" href="../ICON/fontawesome-free-6.3.0-web/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css"
         integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiBw=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
-        <link rel="icon" type="image/png" href="/IMG/logoTitile.png"/></head>
+        <link rel="icon" type="image/png" href="../IMG/logoTitile.png"/></head>
 </head>
 
 <body>
@@ -42,8 +42,8 @@
                 <div class="header__form3-english">ENGLISH <i class="fa-solid fa-caret-down"></i>
 
                     <div class="header__form3-moreLanguage">
-                        <p class="header__form3-moreLaguage-text1"><img src="/IMG/eglish.png" alt="">English</p>
-                        <p class="header__form3-moreLaguage-text2"><img src="/IMG/ar.png" alt="">Arabic</p>
+                        <p class="header__form3-moreLaguage-text1"><img src="../IMG/eglish.png" alt="">English</p>
+                        <p class="header__form3-moreLaguage-text2"><img src="../IMG/ar.png" alt="">Arabic</p>
 
                     </div>
                 </div>
@@ -70,7 +70,7 @@
 
     <div class="header2">
       <div class="header2__logo">
-        <img src="/IMG/logoshop.png" alt="" />
+        <img src="../IMG/logoshop.png" alt="" />
       </div>
       <div class="header2__menu">
         <!-- HOME -->
@@ -186,7 +186,7 @@
                 <li>Accessories</li>
               </ul>
               <div class="header2__menu-morePROMOTION-img">
-                <img src="/IMG/headphone.jpg" alt="" />
+                <img src="../IMG/headphone.jpg" alt="" />
               </div>
             </div>
           </div>
@@ -200,7 +200,7 @@
             <div class="header2__menu-moreACCESSORIES-listItem">
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head1.png" alt="" style="width: 71%" />
+                  <img src="../IMG/head1.png" alt="" style="width: 71%" />
                 </div>
   
                 <hr />
@@ -211,7 +211,7 @@
   
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head2.png" alt="" />
+                  <img src="../IMG/head2.png" alt="" />
                 </div>
                 <hr />
                 <div class="header2__menu-moreACCESSORIES-content">
@@ -221,7 +221,7 @@
   
               <div class="header2__menu-moreACCESSORIES-img">
                 <div class="header2__menu-moreACCESSORIES-imgItem">
-                  <img src="/IMG/head3.png" alt="" />
+                  <img src="../IMG/head3.png" alt="" />
                 </div>
                 <br />
                 <hr />
@@ -365,7 +365,7 @@
     </div>
     <!-- center -->
     <div class="center">
-        <img style=" display: flex;justify-content: center;align-items: center;" src="/IMG/img-aboutUs/conten2.jpg"
+        <img style=" display: flex;justify-content: center;align-items: center;" src="../IMG/img-aboutUs/conten2.jpg"
             alt="">
         <h2 style="margin-top: 50px;">WELCOME TO HITHEME</h2>
         <p style="width: 1000px;">Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean
@@ -384,29 +384,29 @@
 
             <div class="center_one">
                 <div class="one">
-                    <img src="/IMG/img-aboutUs//icon-ab1.png" alt="">
+                    <img src="../IMG/img-aboutUs//icon-ab1.png" alt="">
                     <h3 style="">DELIVERED WITH CARE</h3>
                     <p>Each product item is carefully checked before appearing on Hitheme</p>
-                    <img style="" src="/IMG/img-aboutUs//ab1.jpg" alt="">
+                    <img style="" src="../IMG/img-aboutUs//ab1.jpg" alt="">
                     <h3 style="">WHAT WE REALLY DO?</h3>
                     <p>Get all the best deals, sales and offers from the best online</p>
                     <p style=""> shopping store in UAE. Sign up now !</p>
                 </div>
 
                 <div class="one">
-                    <img src="/IMG/img-aboutUs/icon-ab2.png" alt="">
+                    <img src="../IMG/img-aboutUs/icon-ab2.png" alt="">
                     <h3 style="">EXCELLENT QUALITY</h3>
                     <p>Each product item is carefully checked before appearing on Hitheme</p> 
-                    <img style="" src="/IMG/img-aboutUs//ab2.jpg" alt="">
+                    <img style="" src="../IMG/img-aboutUs//ab2.jpg" alt="">
                     <h3 style="">OUR VERSION</h3>
                     <p>Get all the best deals, sales and offers from the best online</p>
                     <p style=""> shopping store in UAE. Sign up now !</p>
                 </div>
                 <div class="one">
-                    <img src="/IMG/img-aboutUs//icon-ab3.png" alt="">
+                    <img src="../IMG/img-aboutUs//icon-ab3.png" alt="">
                     <h3 style="">FASTER DELIVERY</h3>
                     <p>All these products are under the brand reputation, with clear origins, competitive pricing.</p>
-                    <img style="" src="/IMG/img-aboutUs//ab3.jpg" alt="">
+                    <img style="" src="../IMG/img-aboutUs//ab3.jpg" alt="">
                     <h3 style="">HISTORY OF BEGINNING</h3>
                     <p>Get all the best deals, sales and offers from the best online</p>
                     <p style=""> shopping store in UAE. Sign up now !</p>
@@ -419,22 +419,22 @@
     
             <div class="center_two">
                 <div class="two">
-                    <img src="/IMG/img-aboutUs//ot1.jpg" alt="">
+                    <img src="../IMG/img-aboutUs//ot1.jpg" alt="">
                     <h3 style="font-size: 18px;text-align: center;margin: 10px 0px;">Hamilton</h3>
                     <p style="text-align: center;">Administrator,Web Designer </p>
                 </div>
                 <div class="two">
-                    <img src="/IMG/img-aboutUs//ot3.jpg" alt="">
+                    <img src="../IMG/img-aboutUs//ot3.jpg" alt="">
                     <h3 style="font-size: 18px;text-align: center;margin: 10px 0px;"> Michal Kors</h3>
                     <p style="text-align: center;">Administrator,Web Designer </p>
                 </div>
                 <div class="two">
-                    <img src="/IMG/img-aboutUs//ot2.jpg" alt="">
+                    <img src="../IMG/img-aboutUs//ot2.jpg" alt="">
                     <h3 style="font-size: 18px;text-align: center;margin: 10px 0px;">John Doe</h3>
                     <p style="text-align: center;">Administrator,Web Designer </p>
                 </div>
                 <div class="two">
-                    <img src="/IMG/img-aboutUs//ot4.jpg" alt="">
+                    <img src="../IMG/img-aboutUs//ot4.jpg" alt="">
                     <h3 style="font-size: 18px;text-align: center;margin: 10px 0px;">Katharin</h3>
                     <p style="text-align: center;">Administrator,Web Designer </p>
                 </div>
@@ -447,22 +447,22 @@
   <div class="logo">
     <div class="logo__form">
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran1.jpg" alt="" />
+        <img src="../IMG/logo/bran1.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran2.jpg" alt="" />
+        <img src="../IMG/logo/bran2.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran3.jpg" alt="" />
+        <img src="../IMG/logo/bran3.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran4.jpg" alt="" />
+        <img src="../IMG/logo/bran4.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran5.jpg" alt="" />
+        <img src="../IMG/logo/bran5.jpg" alt="" />
       </div>
       <div class="logo__form-items">
-        <img src="/IMG/logo/bran6.jpg" alt="" />
+        <img src="../IMG/logo/bran6.jpg" alt="" />
       </div>
     </div>
   </div>
@@ -472,7 +472,7 @@
     <div class="footer">
         <div class="footer__infor">
             <div class="footer__infor-logo">
-                <img src="/IMG/img-aboutUs/logo2.png" alt="" />
+                <img src="../IMG/img-aboutUs/logo2.png" alt="" />
             </div>
             <br />
             <div class="footer__infor-contact">
@@ -490,7 +490,7 @@
                 <span style="font-weight: 700; color: #fff">PHONE:</span>
                 <span style="color: #ff4000; font-weight: 700; font-size: 30px">1-88-345-6789</span>
                 <br /><br />
-                <img src="/IMG/img-aboutUs/sds.png" alt="" />
+                <img src="../IMG/img-aboutUs/sds.png" alt="" />
             </div>
         </div>
 
